# LinkedIn-AI-Agent

./: .gitignore  telegram_bot_runner.py  test_conversational_brainstorming.py
.cursor/: mcprules.mdc  scratchpad.md
db/: chroma.sqlite3
linkedin_ai_agent/: README.md  linkedin_post.md  pyproject.toml  telegram_bot_runner.py
linkedin_ai_agent/db/: chroma.sqlite3
linkedin_ai_agent/src/linkedin_ai_agent/: crew.py  main.py  telegram_bot.py
linkedin_ai_agent/src/linkedin_ai_agent/config/: agents.yaml  tasks.yaml
linkedin_ai_agent/src/linkedin_ai_agent/tools/: human_input_tool.py
linkedin_ai_agent/src/linkedin_ai_agent/utils/: performance_monitor.py
